postgresql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgresql-ingress
  namespace: postgresql
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
  - host: postgresql.mynet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgresql
            port:
              number: 5432
